Updated CFP for NGMobile2022

--- a/css/style.css
+++ b/css/style.css
@@ -354,7 +354,7 @@ button:focus,
  *-------------------*/
 
 .jumbotron {
-    background            : url("../img/img-jumbotron-bg.jpg");
+    background            : url("../img/bologna-night-life.jpg");
     background-size       : cover;
     padding               : 100px;
     margin                : 0;
